k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bike-store-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bike-store-ns
  template:
    metadata:
      labels:
        app: bike-store-ns
    spec:
      containers:
      - name: bike-store-ns
        image: nikolaanicic/city-store
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: city-config
            mountPath: /etc/config/config.yaml
            subPath: config.yaml
            readOnly: true
          - name: citystore-db-password
            mountPath: /run/secrets/citystore-db-password
            subPath: MYSQL_ROOT_PASSWORD_FILE
            readOnly: true
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"

      - name: citystore-db
        image: mysql
        ports:
          - containerPort: 3306
        volumeMounts:
          - name: citystore-db-password
            mountPath: /run/secrets/citystore-db-password
            subPath: MYSQL_ROOT_PASSWORD_FILE
            readOnly: true
          - mountPath: /var/lib/mysql
            name: datans
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "1"
      volumes:
        - name: city-config
          configMap:
            name: city-config
        - name: citystore-db-password
          secret:
            secretName: citystore-db-password
        - name: datans
          persistentVolumeClaim:
            claimName: host-pvc-ns
        - name: migrations-volume
          configMap:
            name: citystore-migrations-configmap 


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bike-store-kg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bike-store-kg
  template:
    metadata:
      labels:
        app: bike-store-kg
    spec:
      containers:
      - name: bike-store-kg
        image: nikolaanicic/city-store
        ports:
          - containerPort: 8080


      - name: citystore-db
        image: mysql
        ports:
          - containerPort: 3306
        volumeMounts:
          - name: citystore-db-password
            mountPath: /run/secrets/citystore-db-password
            readOnly: true
          - mountPath: /var/lib/mysql
            name: datakg


      volumes:
        - name: citystore-db-password
          secret:
            secretName: citystore-db-password
        - name: datakg
          persistentVolumeClaim:
            claimName: host-pvc-kg
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bike-store-su
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bike-store-su
  template:
    metadata:
      labels:
        app: bike-store-su
    spec:
      containers:
      - name: bike-store-su
        image: nikolaanicic/city-store
        ports:
          - containerPort: 8080


      - name: citystore-db
        image: mysql
        ports:
          - containerPort: 3306
        volumeMounts:
          - name: citystore-db-password
            mountPath: /run/secrets/citystore-db-password
            readOnly: true
          - mountPath: /var/lib/mysql
            name: datasu


      volumes:
        - name: citystore-db-password
          secret:
            secretName: citystore-db-password
        - name: datasu
          persistentVolumeClaim:
            claimName: host-pvc-su
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bike-store-central
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bike-store-central
  template:
    metadata:
      labels:
        app: bike-store-central
    spec:
      containers:
      - name: centralstore-db
        image: mysql
        ports:
          - containerPort: 3306
        volumeMounts:
          - name: centralstore-db-password
            mountPath: /run/secrets/centralstore-db-password
            readOnly: true
          - mountPath: /var/lib/mysql
            name: datacentral

      - name: bike-store-central
        image: nikolaanicic/central_store
        ports:
          - containerPort: 5000

      volumes:
        - name: centralstore-db-password
          secret:
            secretName: centralstore-db-password
        - name: datacentral
          persistentVolumeClaim:
            claimName: host-pvc-central
---
